styles.css
@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Martian+Mono:wght@100;200;300;400;500;600;700;800&display=swap");

*::before,
*::after {
  box-sizing: border-box;
}

:root {
  font-family: "Martian Mono", monospace;
  font-size: 16px;
}

.container {
  display: grid;
  gap: 0.1em;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
  grid-template-areas:
    "sidebar top-nav top-nav top-nav top-nav"
    "sidebar main main main main"
    "sidebar main main main main"
    "sidebar main main main main"
    "sidebar main main main main";
  height: 100vh;
  overflow: hidden;
}

.container p {
  padding: 0.3em;
  border-radius: 0.5em;
  padding: 1%;
}

.sidebar {
  background-color: #05386b;
  grid-area: sidebar;
  color: white;
}

.sidebar > div {
  padding: 0.3em;
}

[class^="icon"] {
  width: 1.8em;
  height: 1.8em;
  position: relative;
  top: 0.39em;
  color: white;
  -webkit-filter: invert(100%);
  #changes the colour of icons from black to white;
}
.top-nav {
  background-color: #379683;
  grid-area: top-nav;
  display: grid;
  grid-template-columns: 3fr 2fr;
}

.logged-in p,
.three-buttons p {
  margin-left: 15rem;
}

.button {
  border-radius: 2em;
  padding: 0.6em;
  font: 2em;
  background-color: #05386b;
  color: white;
}

.top-nav > div {
  padding: 2%;
}

.top-nav input[type="text"] {
  padding: 0.3em;
  border-radius: 0.7em;
  font-size: medium;
  width: min(80%);
}

.top-nav.search-bar {
  background-color: white;
}

.main {
  background-color: #5cdb95;
  grid-area: main;
  display: grid;
  gap: 0.3rem;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: repeat(11, 1fr);
}

.projects {
  grid-area: projects;
}

.element {
  border-radius: 0.5em;
  padding: 1%;
  background-color: #8ee4af;
}

.projects {
  grid-column: 1 / 5;
  grid-row: 1 / 1;
}

.item-1 {
  grid-column: 1 / 3;
  grid-row: 2 / 5;
}

.item-2 {
  grid-column: 1 / 3;
  grid-row: 5 / 8;
}

.item-3 {
  grid-column: 1 / 3;
  grid-row: 8 / 11;
}

.item-4 {
  grid-column: 3 / 5;
  grid-row: 2 / 5;
}

.item-5 {
  grid-column: 3 / 5;
  grid-row: 5 / 8;
}

.item-6 {
  grid-column: 3 / 5;
  grid-row: 8 / 11;
}

.annoucements {
  grid-column: 5 / 6;
  grid-row: 1 / 1;
}

.item-7 {
  grid-column: 5 / 6;
  grid-row: 2 / 6;
}

.trending {
  grid-column: 5 / 7;
  grid-row: 6 / 7;
}

.item-8 {
  grid-column: 5 / 7;
  grid-row: 7 / 11;
}

